# rust-socialite

./: AUDIT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEW_AUDIT.md  README.md  README_pt.md  RELEASING.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SUPPORT.md  add_pkce.py  bump_version.py  fix_auth0.py  fix_clippy.py  fix_warnings.py  refactor.py  refactor_macro.py  refactor_phase2.py  release.toml  resolve_conflicts.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
benches/: provider_bench.rs
examples/: axum_example.rs  axum_server.rs  benchmark.rs
src/: client.rs  error.rs  extractors.rs  lib.rs  macros.rs  mock_idp.rs  pkce.rs  prelude.rs  provider.rs  user.rs  utils.rs
src/providers/: apple.rs  asana.rs  auth0.rs  basecamp.rs  bitbucket.rs  cognito.rs  digitalocean.rs  discord.rs  dropbox.rs  facebook.rs  github.rs  gitlab.rs  google.rs  instagram.rs  line.rs  linear.rs  linkedin.rs  microsoft.rs  mock.rs  mod.rs  notion.rs  oidc.rs  okta.rs  patreon.rs  pinterest.rs  reddit.rs  slack.rs  snapchat.rs  spotify.rs  stripe.rs  tiktok.rs  twitch.rs  vk.rs  x.rs  yahoo.rs  zoom.rs
tests/: integration_test.rs  integration_tests.rs
