[package]
name = "rust-socialite"
version = "0.4.0"
edition = "2024"
description = "OAuth2 Social Login for Rust web frameworks, inspired by Laravel Socialite."
license = "MIT"
repository = "https://github.com/venelouis/rust-socialite"
categories = ["web-programming", "authentication"]
keywords = ["oauth2", "socialite", "authentication", "login"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
jsonwebtoken = "10.4.0"
rand = "0.8"
reqwest = { version = "0.13.3", features = ["form", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"

[dev-dependencies]
axum = "0.8.9"
