[package]
name = "rullst-connect"
version = "6.1.1"
edition = "2024"
description = "OAuth2 Social Login for Rust web frameworks, inspired by Laravel Socialite."
license = "MIT"
repository = "https://github.com/venelouis/rullst-connect"
categories = ["web-programming", "authentication"]
keywords = ["oauth2", "socialite", "authentication", "login"]

[features]
default = []
axum = ["dep:axum"]
actix = ["dep:actix-web"]
leptos = ["dep:leptos_router"]
rullst = ["axum"]
retry = ["dep:reqwest-middleware", "dep:reqwest-retry"]
reqwest-middleware = ["dep:reqwest-middleware"]
axum-session = ["axum", "dep:tower-sessions"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
jsonwebtoken = "10.4.0"
rand = "0.8"
reqwest = { version = "0.13.3", features = ["form", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"

axum = { version = "0.8.9", optional = true }
actix-web = { version = "4.9.0", optional = true }
leptos_router = { version = "0.6", optional = true }
serde_urlencoded = "0.7.1"
reqwest-middleware = { version = "0.5.2", optional = true }
reqwest-retry = { version = "0.9.1", optional = true }
tower-sessions = { version = "0.13.0", optional = true }

[dev-dependencies]
axum = "0.8.9"
actix-web = "4.9.0"
serde_urlencoded = "0.7.1"
wiremock = "0.6.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "provider_bench"
harness = false

[[example]]
name = "axum_example"
required-features = ["axum"]
